// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A standard order 1`] = `
<li
  className="fyDrf"
>
  <span
    className="gRzsfa"
  >
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fKqvxj"
  >
    MOOIE 456 TEST
  </span>
  <span
    className="iSxaIr"
  >
    <ul
      className="tvpac"
    >
      <li
        className="a"
      >
        1
        x 
        Name of the product
      </li>
      <li
        className="a"
      >
        2
        x 
        Another product
      </li>
    </ul>
  </span>
  <span
    className="FOjhs"
  >
    <span>
      $100.00
    </span>
  </span>
  <span
    className="gWfuXy"
  >
    <span>
      Completed
    </span>
  </span>
  <span
    className="gJSEqq"
  >
    <div>
      <a
        aria-label="Download invoice"
        className="hmGMxK"
        href="https://my.yoast.com/api/Orders/1/invoice?access_token="
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screen-reader-text"
        >
          Invoice
        </span>
      </a>
    </div>
  </span>
</li>
`;

exports[`An Order with a disabled invoice button 1`] = `
<li
  className="fyDrf"
>
  <span
    className="gRzsfa"
  >
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fKqvxj"
  >
    MOOIE 456 TEST
  </span>
  <span
    className="iSxaIr"
  >
    <ul
      className="tvpac"
    >
      <li
        className="a"
      >
        1
        x 
        Name of the product
      </li>
      <li
        className="a"
      >
        2
        x 
        Another product
      </li>
    </ul>
  </span>
  <span
    className="FOjhs"
  >
    <span>
      $100.00
    </span>
  </span>
  <span
    className="gWfuXy"
  >
    <span>
      Pending
    </span>
  </span>
  <span
    className="gJSEqq"
  >
    <div>
      <a
        aria-label="Download invoice"
        className="hmGMxK"
        href="https://my.yoast.com/api/Orders/1/invoice?access_token="
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screen-reader-text"
        >
          Invoice
        </span>
      </a>
    </div>
  </span>
</li>
`;
